# kube

./: README.md  docker-compose.yml  helmfile.yaml  pyproject.toml
app/: Dockerfile  deployment.yaml  main.py  pyproject.toml
app/fastapi-app/: values.yaml
app/fastapi-app/templates/: deployment.yaml
app/helm/: Chart.yaml
app/helm/templates/: deployment.yaml  service.yaml
kubernetes/app/templates/: deployment.yaml
kubernetes/rabbitmq/: values.yaml
kubernetes/subscriber/: Chart.yaml
kubernetes/subscriber/templates/: deployment.yaml
subscriber/: Dockerfile  main.py  pyproject.toml
