[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Julien Danh <danh.julien@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
